# python-template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/python_template/: __init__.py  __main__.py  cli.py
src/python_template/commands/: __init__.py  example.py  version.py
tests/: test_cli.py  test_integration.py  test_logging.py  test_version.py
